third_party/move/move-compiler-v2/tests/deprecated/assert_function.exp

Diagnostics:
error: no function named `assert` found
  ┌─ tests/deprecated/assert_function.move:3:9
  │
3 │         assert(true, 42);
  │         ^^^^^^^^^^^^^^^^
