third_party/move/move-compiler-v2/tests/deprecated/assert_function.move
script {
    fun main() {
        assert(true, 42);
    }
}
